--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9112,7 +9112,7 @@ button.link-create {
   background-clip: text;
   color: transparent;
 }
-.fa-brands.fa-x-twitter { color: #000000; }
+.fa-brands.fa-x-twitter { color: var(--text); }
 .fa-brands.fa-tiktok {
   color: #ffffff;
   text-shadow: -1px -1px 0 #25f4ee, 1px 1px 0 #fe2c55;
